# p5-notebook

./: .eslintignore  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  deploy.sh  index.html  install.json  jupyter-lite.json  jupyter_lite.json  jupyter_lite_config.json  lerna.json  overrides.json  package.json  pixi.toml  pyproject.toml  requirements-deploy.txt  requirements.txt  setup.py  stage.js  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  deploy.yml
demo/: animation.html  intro.ipynb
p5_notebook/: __init__.py
src/: declarations.d.ts  index.ts  tokens.ts
src/app/: app.ts  commands.ts  service.ts  shell.ts
src/app/plugins/launcher/: index.ts
src/app/plugins/notebook/: commands.ts  index.ts
src/app/plugins/splash/: index.ts
src/app/plugins/theme/: index.ts  manager.ts
src/app/plugins/top/: index.ts  index.tsx  menu.ts  tokens.ts
src/server/: contents.ts  kernel.ts  kernels.ts  kernelspecs.ts  router.ts  server.ts  sessions.ts  settings.ts  status.ts  themes.ts
src/server/kernels/: kernel.ts  pyp5Kernel.ts
src/server/resources/: default.ipynb
style/: index.css
