[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["p5_notebook/labextension/static/style.js"]
ensured-targets = ["p5_notebook/labextension/static/style.js", "p5_notebook/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["p5_notebook/labextension/**", "p5_notebook/p5-theme-light/**", "p5_notebook/p5-theme-dark/**", "yarn.lock", ".*", "*.json", "*.ico", "demo/**", "*.sh", "requirements-deploy.txt", "packages/**"]
